# bazel-python-src-tests-example

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  gazelle_python.yaml  pyproject.toml  requirements_lock.txt
src/mypackage/: BUILD  BUILD.bazel  bar_program.py  foo.py  foobar.py
src/mypackage/subpackage/: BUILD  BUILD.bazel
src/myproject/: BUILD
tests/: BUILD  BUILD.bazel  test_foo.py  test_foobar.py  test_main.py
tests/subpackage/: BUILD  BUILD.bazel  test_subfoo.py
