# Define metadata about this repository/project.
module(
    name = "bazel-python-src-tests-example",
    version = "0.0.0",
    compatibility_level = 1,
)

# Skylib is kinda like a standard library for Starlark, the language used by
# Bazel. We don't actualy use any skylib in this example project, but it's good
# to demonstrate.
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Install rules_python, which allows us to define how bazel should work with python files.
# See https://github.com/bazelbuild/rules_python/blob/main/examples/bzlmod/MODULE.bazel
# In the old WORKSPACE file, this would be 4 items:
#   1.  `load` the http_archive rule
#   2.  run the http_archive rule, grapping rules_python from github
#   3.  load the py_repositories target from rules_python
#   4.  execute py_respositories()
bazel_dep(name = "rules_python", version = "0.31.0")

# Initialize the python toolchain using the rules_python extension.
# This is similar to the "python_register_toolchains" function in WORKSPACE.
# It creates a hermetic python rather than relying on a system-installed interpreter.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.10",
)

# Enable pip
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Configure how we fetch python dependencies via pip
pip.parse(
    # This name is what gets used in other BUILD files with `load()`.
    hub_name = "pypi",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)

# Same as WORKSPACE install_deps() - actually install the python deps.
use_repo(pip, "pypi")
